14. Архивировать проект[#861 #385216]